# SYsU-lang-Compiler

./: .gitignore  CMakeLists.txt  README.md  config.cmake
front-end/: Ast2Asg.cpp  Ast2Asg.hpp  CMakeLists.txt  main.cpp  print_tokens.cpp  print_tokens.hpp
front-end/antlr/: C.g4  C.interp  CLexer.cpp  CLexer.h  CMakeLists.txt  CParser.cpp  CParser.h  gen.sh
front-end/asg/: Asg2Json.cpp  Asg2Json.hpp  CMakeLists.txt  EmitIR.cpp  EmitIR.hpp  Json2Asg.cpp  Json2Asg.hpp  Obj.cpp  Obj.hpp  Typing.cpp  Typing.hpp  asg.cpp  asg.hpp
optimizer/: CMakeLists.txt  ConstantFolding.cpp  ConstantFolding.hpp  Mem2Reg.cpp  Mem2Reg.hpp  PromoteMemToReg.hpp  PromoteMemoryToRegister.cpp  StaticCallCounter.cpp  StaticCallCounter.hpp  StaticCallCounterPrinter.cpp  StaticCallCounterPrinter.hpp  StrengthReduction.cpp  StrengthReduction.hpp  main.cpp
test/task0/: CMakeLists.txt  score.py
test/task1/: CMakeLists.txt
test/task2/: CMakeLists.txt
test/task3/: CMakeLists.txt
test/task4/: CMakeLists.txt
